<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- ________review strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="this_week_s_review_string">This Weeks Review</string>
	<string name="popularity_review_string">Popularity Review</string>
	<string name="ettude_string">Ettude</string>
	<string name="hera_string">HERA</string>
	<string name="magazine_string">Magazine</string>
	<string name="community_string">COMMUNITY</string>
	<string name="review_string">Review</string>
	<string name="question_string">Question</string>
	<string name="following_string">Following</string>
	<string name="ettude_review">Color is really beautiful and I can use it anywhere on my body</string>
	<string name="hera_review">This is Tint number 1003i really recommend to teenagers like me</string>
	<string name="top_1__loccitane_string">TOP 1. LOCCITANE</string>
	<string name="top_2__hera_spring_string">TOP 2. HERA SPRING</string>
	<string name="hajin_choi_string">Hajin CHOI</string>
	<string name="minseo_dan_string">Minseo Dan</string>
	<string name="magazine_ek1_string">Magazine</string>
	<string name="community_ek1_string">COMMUNITY</string>
	<string name="review_ek1_string">Review</string>
	<string name="question_ek1_string">Question</string>
	<string name="following_ek1_string">Following</string>
	<string name="recommend_unnis_influence_string">Recommend UNNIS Influence</string>
	<string name="following_ek2_string">Following</string>
	<string name="xoxo_string">xoxo</string>
	<string name="ming_string">ming</string>
	<string name="follow_string">Follow</string>
	<string name="follow_ek1_string">Follow</string>
	<string name="reply_first_string">Reply First</string>
	<string name="reply_first_ek1_string">Reply First</string>
	<string name="reply_first_ek2_string">Reply First</string>
	<string name="this_week_s_review_ek1_string">This Weeks Review</string>
	<string name="ettude_ek1_string">Ettude</string>
	<string name="reply_first_ek3_string">Reply First</string>
	<string name="reply_first_ek4_string">Reply First</string>
	<string name="reply_first_ek5_string">Reply First</string>

</resources>