<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/review_page"
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<ImageView
				android:id="@+id/arrow"
				android:src="@drawable/arrow"
				android:layout_width="39dp"
				android:layout_height="46dp"
				android:layout_marginStart="14dp"
				android:layout_marginTop="26dp" />

			<TextView
				android:id="@+id/community"
				android:text="@string/community_string"
				android:textColor="#000000"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_width="100dp"
				android:layout_height="28.6dp"
				android:layout_marginLeft="156dp"
				android:layout_marginTop="39dp" />

			<Button
				android:id="@+id/magazine_btn"
				android:background="#00ff0000"
				android:text="@string/magazine_string"
				android:textSize="14sp"
				android:textColor="#000000"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="103dp"
				android:layout_marginTop="90dp" />

			<Button
				android:id="@+id/review_btn"
				android:background="#00ff0000"
				android:text="@string/review_string"
				android:textSize="14sp"
				android:textColor="#000000"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="0dp"
				android:layout_marginTop="90dp" />

			<Button
				android:id="@+id/question_btn"
				android:background="#00ff0000"
				android:text="@string/question_string"
				android:textSize="14sp"
				android:textColor="#000000"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="206dp"
				android:layout_marginTop="90dp" />

			<Button
				android:id="@+id/following_btn"
				android:background="#00FF0000"
				android:text="@string/following_string"
				android:textSize="14sp"
				android:textColor="#000000"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="309dp"
				android:layout_marginTop="90dp" />

			<RelativeLayout
				android:id="@+id/weeks_review_container"
				android:background="@drawable/weeks_review"
				android:layout_width="412dp"
				android:layout_height="340dp"
				android:layout_marginTop="134dp">

				<TextView
					android:id="@+id/this_weeks_review"
					android:text="This Weeks Review"
					android:textColor="#FFFFFF"
					android:textSize="18sp"
					android:textStyle="bold"
					android:layout_width="160dp"
					android:layout_height="30dp"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="18dp" />

				<ImageView
					android:id="@+id/ettude_img"
					android:src="@drawable/ettude"
					android:layout_width="180dp"
					android:layout_height="180dp"
					android:layout_marginLeft="16dp"
					android:layout_marginTop="60dp" />

				<TextView
					android:id="@+id/ettude_name"
					android:text="@string/ettude_string"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="#FFFFFF"
					android:layout_width="79.4dp"
					android:layout_height="31.4dp"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="250dp"/>

				<TextView
					android:id="@+id/ettude_review"
					android:text="@string/ettude_review"
					android:textSize="12dp"
					android:textColor="#FFFFFF"
					android:layout_width="165dp"
					android:layout_height="50dp"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="274dp" />

				<ImageView
					android:id="@+id/hera_img"
					android:src="@drawable/hera"
					android:layout_width="180dp"
					android:layout_height="180dp"
					android:layout_marginStart="210dp"
					android:layout_marginTop="60dp" />

				<TextView
					android:id="@+id/hera_name"
					android:text="@string/hera_string"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="#FFFFFF"
					android:layout_width="79.4dp"
					android:layout_height="31.4dp"
					android:layout_marginLeft="218dp"
					android:layout_marginTop="250dp" />


				<TextView
					android:id="@+id/hera_review"
					android:text="@string/hera_review"
					android:textSize="12sp"
					android:textColor="#FFFFFF"
					android:layout_width="165dp"
					android:layout_height="50dp"
					android:layout_marginLeft="218dp"
					android:layout_marginTop="274dp" />

			</RelativeLayout>

			<TextView
				android:id="@+id/popularity_review"
				android:text="@string/popularity_review_string"
				android:textSize="18sp"
				android:textColor="@color/popularity_review_color"
				android:layout_width="175.8dp"
				android:layout_height="29.8dp"
				android:layout_marginLeft="19dp"
				android:layout_marginTop="500dp"/>


			<RelativeLayout
				android:id="@+id/pop1"
				android:layout_width="200dp"
				android:layout_height="260dp"
				android:layout_marginTop="540dp">

				<ImageView
					android:id="@+id/loccitane_img"
					android:src="@drawable/roccitane"
					android:layout_width="160dp"
					android:layout_height="180dp"
					android:layout_marginStart="24dp"
					android:layout_marginTop="14dp" />

				<ImageView
					android:id="@+id/loccitane_box"
					android:background="@drawable/product_box"
					android:layout_marginStart="26dp"
					android:layout_marginTop="204dp"
					android:layout_width="154dp"
					android:layout_height="44dp" />

				<TextView
					android:id="@+id/loccitane_name"
					android:text="@string/top_1__loccitane_string"
					android:textSize="11sp"
					android:textColor="#000000"
					android:layout_width="148.1dp"
					android:layout_height="21.1dp"
					android:layout_marginLeft="34dp"
					android:layout_marginTop="210dp" />

				<TextView
					android:id="@+id/minseo_dan"
					android:text="@string/minseo_dan_string"
					android:textColor="#000000"
					android:layout_width="84dp"
					android:layout_height="20.8dp"
					android:layout_marginLeft="94dp"
					android:layout_marginTop="224dp" />

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/pop2"
				android:layout_width="200dp"
				android:layout_height="260dp"
				android:layout_marginStart="204dp"
				android:layout_marginTop="540dp">

				<ImageView
					android:id="@+id/cusion_box"
					android:src="@drawable/product_box"
					android:layout_width="157dp"
					android:layout_height="44dp"
					android:contentDescription="rectangle_7"
					android:layout_marginStart="10dp"
					android:layout_marginTop="14dp" />

				<TextView
					android:id="@+id/cusion_name"
					android:text="@string/top_2__hera_spring_string"
					android:textSize="11sp"
					android:textColor="#000000"
					android:layout_width="148.1dp"
					android:layout_height="21.1dp"
					android:layout_marginLeft="18dp"
					android:layout_marginTop="20dp" />

				<TextView android:id="@+id/hajin_choi"
					android:text="@string/hajin_choi_string"
					android:textColor="#000000"
					android:layout_width="69.8dp"
					android:layout_height="20.8dp"
					android:layout_marginLeft="88dp"
					android:layout_marginTop="34dp" />

				<ImageView
					android:id="@+id/cusion_img"
					android:src="@drawable/cusion"
					android:layout_width="166dp"
					android:layout_height="180dp"
					android:layout_marginStart="7dp"
					android:layout_marginTop="66dp" />

			</RelativeLayout>

			<ImageView android:id="@+id/tab_bar"
				android:src="@drawable/tab_bar"
				android:contentDescription="tab_bar"
				android:layout_marginTop="814dp"
				android:layout_width="412dp"
				android:layout_height="78dp" />

		</RelativeLayout>
	</ScrollView>
</HorizontalScrollView>