<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<LinearLayout
		android:id="@+id/content_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<RelativeLayout
			android:layout_width="412dp"
			android:layout_height="138dp"
			android:background="#FFFFFF"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/arrow"
				android:layout_width="39dp"
				android:layout_height="46dp"
				android:layout_marginStart="14dp"
				android:layout_marginTop="26dp"
				android:src="@drawable/arrow" />

			<TextView
				android:id="@+id/community"
				android:layout_width="100dp"
				android:layout_height="28.6dp"
				android:layout_marginLeft="156dp"
				android:layout_marginTop="39dp"
				android:text="@string/community_string"
				android:textColor="#000000"
				android:textSize="16sp"
				android:textStyle="bold" />

			<Button
				android:id="@+id/magazine_btn"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="103dp"
				android:layout_marginTop="90dp"
				android:background="#00ff0000"
				android:text="@string/magazine_string"
				android:textColor="#000000"
				android:textSize="14sp" />

			<Button
				android:id="@+id/review_btn"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="0dp"
				android:layout_marginTop="90dp"
				android:background="#00ff0000"
				android:text="@string/review_string"
				android:textColor="#000000"
				android:textSize="14sp" />

			<Button
				android:id="@+id/question_btn"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="206dp"
				android:layout_marginTop="90dp"
				android:background="#00ff0000"
				android:text="@string/question_string"
				android:textColor="#000000"
				android:textSize="14sp" />

			<Button
				android:id="@+id/following_btn"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="309dp"
				android:layout_marginTop="90dp"
				android:background="#00FF0000"
				android:text="@string/following_string"
				android:textColor="#000000"
				android:textSize="14sp" />

			<ImageView
				android:id="@+id/line"
				android:layout_width="412dp"
				android:layout_height="3dp"
				android:layout_marginTop="134dp"
				android:background="#D3D3D3"
				android:contentDescription="line" />

		</RelativeLayout>

		<ScrollView
			android:id="@+id/question_page"
			android:layout_width="match_parent"
			android:layout_height="676dp"
			android:background="#F3F3F3">

			<LinearLayout
				android:layout_width="412dp"
				android:layout_height="150dp"
				android:background="#FFFFFF">

				<Button
					android:id="@+id/reply_first1"
					android:layout_width="134dp"
					android:layout_height="27dp"
					android:layout_marginStart="240dp"
					android:background="@drawable/reply_first"
					android:gravity="center"
					android:text="@string/reply_first_ek3_string"
					android:textColor="@color/reply_first_color"
					android:textSize="14sp"
					android:textStyle="bold" />

			</LinearLayout>
		</ScrollView>

		<ImageView android:id="@+id/tab_bar"
			android:src="@drawable/tab_bar"
			android:layout_marginTop="0dp"
			android:layout_width="412dp"
			android:layout_height="78dp" />

	</LinearLayout>
</HorizontalScrollView>