<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/magazine_page"
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<ImageView
				android:id="@+id/arrow"
				android:src="@drawable/arrow"
				android:layout_width="39dp"
				android:layout_height="46dp"
				android:layout_marginStart="14dp"
				android:layout_marginTop="26dp" />

			<TextView
				android:id="@+id/community"
				android:text="@string/community_string"
				android:textColor="#000000"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_width="100dp"
				android:layout_height="28.6dp"
				android:layout_marginLeft="156dp"
				android:layout_marginTop="39dp" />

			<Button
				android:id="@+id/magazine_btn"
				android:background="#00ff0000"
				android:text="@string/magazine_string"
				android:textSize="14sp"
				android:textColor="#000000"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="103dp"
				android:layout_marginTop="90dp" />

			<Button
				android:id="@+id/review_btn"
				android:background="#00ff0000"
				android:text="@string/review_string"
				android:textSize="14sp"
				android:textColor="#000000"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="0dp"
				android:layout_marginTop="90dp" />

			<Button
				android:id="@+id/question_btn"
				android:background="#00ff0000"
				android:text="@string/question_string"
				android:textSize="14sp"
				android:textColor="#000000"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="206dp"
				android:layout_marginTop="90dp" />

			<Button
				android:id="@+id/following_btn"
				android:background="#00FF0000"
				android:text="@string/following_string"
				android:textSize="14sp"
				android:textColor="#000000"
				android:layout_width="103dp"
				android:layout_height="44dp"
				android:layout_marginLeft="309dp"
				android:layout_marginTop="90dp" />

			<ImageView
				android:id="@+id/line"
				android:background="#D3D3D3"
				android:layout_width="412dp"
				android:layout_height="3dp"
				android:layout_marginTop="134dp" />

			<ImageView
				android:id="@+id/magazine_img"
				android:src="@drawable/magazine"
				android:layout_width="412dp"
				android:layout_height="678dp"
				android:layout_marginTop="138dp" />

			<ImageView android:id="@+id/tab_bar"
				android:src="@drawable/tab_bar"
				android:layout_width="412dp"
				android:layout_height="78dp"
				android:layout_marginTop="814dp" />

		</RelativeLayout>
	</ScrollView>
</HorizontalScrollView>